gcc/testsuite/rust/rustc/ui/typeck/issue-84160_dg.rs
fn mismatched_types_with_reference(x: &u32) -> &u32 {
    if false {
        return x;
    }
    return "test";
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn main() {}

